k8s-do/demo/demo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: ghcr.io/netwerk-digitaal-erfgoed/demo-frontend
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr
